--- a/src/custom_test/Makefile
+++ b/src/custom_test/Makefile
@@ -1,5 +1,5 @@
 TARGET := comms_command
-OBJECTS := $(TARGET).o startup.o vectors.o printf.o peripherals.o radio.o command.o system_stm32l0xx.o stm32l0xx_hal_cortex.o stm32l0xx_ll_utils.o stm32l0xx_ll_usart.o stm32l0xx_ll_rcc.o stm32l0xx_ll_tim.o
+OBJECTS := $(TARGET).o startup.o vectors.o printf.o print_queue.o peripherals.o radio.o command.o system_stm32l0xx.o stm32l0xx_hal_cortex.o stm32l0xx_ll_utils.o stm32l0xx_ll_usart.o stm32l0xx_ll_rcc.o stm32l0xx_ll_tim.o
 
 RAM_START := 0x8000000
 
@@ -18,10 +18,10 @@ OPT		:= -g -Os $(MCU) -msoft-float -DSTM32L0 -DUSE_FULL_LL_DRIVER -I../../libs/s
 CSTD	:= -std=c11
 
 
-CFLAGS	+= $(OPT) $(CSTD) -pedantic
-CFLAGS	+= -Wall -Wextra -Wshadow -Wimplicit-function-declaration
+CFLAGS	+= $(OPT) $(CSTD) #-pedantic
+CFLAGS	+= -Wall -Wextra -Wshadow -Wimplicit-function-declaration -Werror
 CFLAGS	+= -Wredundant-decls -Wmissing-prototypes -Wstrict-prototypes
-CFLAGS	+= -fno-common -ffunction-sections -fdata-sections -fno-builtin
+CFLAGS	+= -fno-common -ffunction-sections -fdata-sections -fno-builtin -fstack-protector-all
 
 LDFLAGS		+=  --static -nostartfiles
 LDFLAGS		+= -Wl,-Map=$(TARGET).map
