Add HSE support, add ability to switch between HSE and HSI

--- a/src/custom_test/Makefile
+++ b/src/custom_test/Makefile
@@ -52,7 +52,10 @@ $(TARGET).elf: $(OBJECTS) $(PREPROCS)
 	$(SIZE) $(TARGET).elf
 
 debug: $(TARGET).elf
-	arm-none-eabi-gdb -ex "target extended-remote localhost:3333" comms_command.elf
+	@exec arm-none-eabi-gdb -ex "target extended-remote localhost:3333" comms_command.elf
+
+debug_t: $(TARGET).elf
+	echo "reset halt" | telnet localhost 4444
 
 debug_telnet: $(TARGET).elf
 	telnet localhost 4444
